--- a/SIFEI/facturacion.html
+++ b/SIFEI/facturacion.html
@@ -69,6 +69,9 @@
     <pre id="output">Esperando acciones…</pre>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="facturacion.js"></script>
+
   <!-- MOTOR -->
   <script src="facturacion.js"></script>
 </body>
