--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   <a href="MAPEOCATA/MAPEO.html">🧩 Mapear Tecnopro Artículos</a>
   <a href="POSVTA4/MONITORTICKETS.html">🎫 Visor de Tickets</a>
   <a href="POSVTA4/POSV4PASS.html">🧾 POS V4 PUNTO DE VENTA MOVIL </a>
-    <a href="POSVTA4/REPORTE-CORTE-V1.2.html">📄 Reporte Ventas para Facturar</a>
-  <a href="SIFEI/FACTURACIONTICKETS.html">🧾 SIFEI POS</a>
+  <a href="POSVTA4/REPORTE-CORTE-V1.2.html">📄 Reporte Ventas para Facturar</a>
+  <a href="SIFEI/facturacion.html">🧾 SIFEI FACTURACION POS</a>
   <a href="MAPEOCATA/SUBIDA.html">⬆️ Subida Tecnopro Artículos</a>
 </div>
 
