--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <a href="POSVTA4/MONITORTICKETS.html">🎫 Visor de Tickets</a>
   <a href="POSVTA4/POSV4PASS.html">🧾 POS V4 PUNTO DE VENTA MOVIL </a>
   <a href="POSVTA4/REPORTE-CORTE-V1.2.html">📄 Reporte Ventas para Facturar</a>
+  <a href="POSVTA4/RECORTES.html">📄 Reimprecion de cortes</a>
   <a href="SIFEI/facturacion.html">🧾 SIFEI FACTURACION POS</a>
   <a href="MAPEOCATA/SUBIDA.html">⬆️ Subida Tecnopro Artículos</a>
 </div>
