--- a/POSVTA4/RECORTES.html
+++ b/POSVTA4/RECORTES.html
@@ -122,11 +122,42 @@ const rutaFiltro = document.getElementById("rutaFiltro");
 const tbody = document.getElementById("tbodyCortes");
 const overlay = document.getElementById("overlay");
 
+  function resolverRuta(doc) {
+  return (
+    doc.rutaId ||
+    doc.ruta ||
+    doc.ruta_nombre ||
+    ""
+  ).toString().trim();
+}
+  function resolverUsuario(doc) {
+  return (
+    doc.usuarioNombre ||
+    doc.usuario ||
+    doc.realizado_por ||
+    doc.encargado ||
+    "—"
+  ).toString().trim();
+}
+  function resolverFecha(doc) {
+  return normalizarFechaCorte(
+    doc.fecha_corte ||
+    doc.fecha ||
+    doc.fecha_txt ||
+    ""
+  );
+}
+
+
 // Cargar lista de rutas distintas
 async function cargarRutas() {
   const snap = await getDocs(collection(db, "cortes_globalesV4"));
   const rutas = new Set();
-  snap.forEach(d => rutas.add(d.data().rutaId));
+  snap.forEach(d => {
+  const ruta = resolverRuta(d.data());
+  if (ruta) rutas.add(ruta);
+});
+  
   rutas.forEach(r => {
     const opt = document.createElement("option");
     opt.value = r;
@@ -144,16 +175,18 @@ rutaFiltro.addEventListener("change", listarCortes);
 function normalizarFechaCorte(fecha) {
   if (!fecha) return "";
 
-  // Quitar coma y espacios
   fecha = fecha.replace(",", "").trim();
 
-  // Convertir DD/MM/YYYY → YYYY-MM-DD
   if (fecha.includes("/")) {
     const [d, m, y] = fecha.split("/");
     return `${y}-${m.padStart(2,"0")}-${d.padStart(2,"0")}`;
   }
 
-  return fecha;
+  if (/^\d{4}-\d{2}-\d{2}$/.test(fecha)) {
+    return fecha;
+  }
+
+  return "";
 }
 
 async function listarCortes() {
@@ -165,20 +198,19 @@ async function listarCortes() {
 const cortes = snap.docs
   .map(d => ({ id: d.id, ...d.data() }))
   .filter(c => {
-    const okRuta =
-      !rutaFiltro.value ||
-      (c.rutaId || "").trim() === rutaFiltro.value.trim();
+const okRuta =
+  !rutaFiltro.value ||
+  resolverRuta(c) === rutaFiltro.value.trim();
 
-    const okFecha =
-      !fechaFiltro.value ||
-      normalizarFechaCorte(c.fecha_corte) === fechaFiltro.value;
-
+const okFecha =
+  !fechaFiltro.value ||
+  resolverFecha(c) === fechaFiltro.value;
+    
     return okRuta && okFecha;
   })
   .sort((a, b) =>
-    normalizarFechaCorte(b.fecha_corte)
-      .localeCompare(normalizarFechaCorte(a.fecha_corte))
-  );
+  resolverFecha(b).localeCompare(resolverFecha(a))
+);
 if (rutaFiltro.value && !fechaFiltro.value && cortes.length) {
   fechaFiltro.value = normalizarFechaCorte(cortes[0].fecha_corte);
 }
@@ -191,16 +223,12 @@ if (rutaFiltro.value && !fechaFiltro.value && cortes.length) {
 tbody.innerHTML = "";
 cortes.forEach(c => {
   const fila = document.createElement("tr");
-const usuarioMostrado =
-  c.usuarioNombre ||
-  c.usuario ||
-  c.realizado_por ||
-  "—";
+const usuarioMostrado = resolverUsuario(c);
 
 fila.innerHTML = `
-  <td>${c.rutaId || "—"}</td>
+  <td>${resolverRuta(c) || "—"}</td>
   <td>${usuarioMostrado}</td>
-  <td>${normalizarFechaCorte(c.fecha_corte)}</td>
+  <td>${resolverFecha(c) || "—"}</td>
   <td><button>🧾 Reimprimir</button></td>
 `;
 
@@ -226,16 +254,12 @@ async function reimprimirCorte(corteDoc) {
       return;
     }
 
-const usuarioResumen =
-  corteDoc.usuarioNombre ||
-  corteDoc.usuario ||
-  corteDoc.realizado_por ||
-  "—";
+const usuarioResumen = resolverUsuario(corteDoc);
 
 resumen = {
   usuario: usuarioResumen,
-  rutaId: corteDoc.rutaId,
-  fecha: normalizarFechaCorte(corteDoc.fecha_corte),
+  rutaId: resolverRuta(corteDoc),
+  fecha: resolverFecha(corteDoc),
   totalDia: corteDoc.totales?.totalDia || 0,
   totalDescuento: corteDoc.totales?.totalDescuento || 0,
   utilidadTotal: corteDoc.totales?.utilidadTotal || 0,
