--- a/POSVTA4/RECORTES.html
+++ b/POSVTA4/RECORTES.html
@@ -300,89 +300,145 @@ async function generarPDF(r, corte) {
   const { jsPDF } = window.jspdf;
   const pdf = new jsPDF({ format: "letter", unit: "mm" });
 
+  let y = 15;
+
+  // ==================================
+  // 🧾 ENCABEZADO
+  // ==================================
   pdf.setFont("helvetica", "bold");
   pdf.setFontSize(14);
-  pdf.text("CORTE DE RUTAS – PROVEEDORA DE DULCES Y DESECHABLES", 10, 15);
-  pdf.setFontSize(12);
-  pdf.text(`Usuario: ${r.usuario}`, 15, 25);
-  pdf.text(`Ruta: ${r.rutaId}`, 15, 32);
-  pdf.text(`Fecha: ${r.fecha}`, 15, 39);
-  pdf.text(`Total Día: $${r.totalDia.toFixed(2)}`, 15, 46);
-  pdf.text(`Descuento: $${r.totalDescuento.toFixed(2)}`, 15, 53);
-  pdf.text(`Utilidad: $${r.utilidadTotal.toFixed(2)}`, 15, 60);
-  pdf.text(`Margen Global: ${r.margenGlobal}%`, 15, 67);
-  let y = 75;
+  pdf.text("CORTE DE RUTA – PROVEEDORA DE DULCES Y DESECHABLES", 105, y, { align: "center" });
 
-// ====================
-// 📊 VENTAS POR DEPARTAMENTO
-// ====================
-if (corte.vista?.deptosOrdenados?.length) {
-  pdf.setFont("helvetica", "bold");
-  pdf.setFontSize(12);
-  pdf.text("VENTAS POR DEPARTAMENTO", 10, y);
+  y += 10;
+  pdf.setFontSize(11);
+  pdf.text(`Usuario: ${r.usuario}`, 15, y);
+  pdf.text(`Ruta: ${r.rutaId}`, 120, y);
+
   y += 6;
+  pdf.text(`Fecha: ${r.fecha}`, 15, y);
+
+  y += 10;
+
+  // ==================================
+  // 📊 RESUMEN GENERAL (TABLA)
+  // ==================================
+  pdf.setFont("helvetica", "bold");
+  pdf.text("RESUMEN GENERAL", 15, y);
+  y += 5;
+
+  const resumen = [
+    ["Total del Día", `$${r.totalDia.toFixed(2)}`],
+    ["Total Descuento", `$${r.totalDescuento.toFixed(2)}`],
+    ["Utilidad Total", `$${r.utilidadTotal.toFixed(2)}`],
+    ["Margen Global", `${r.margenGlobal}%`]
+  ];
 
   pdf.setFont("helvetica", "normal");
-  pdf.setFontSize(10);
 
-  corte.vista.deptosOrdenados.forEach(d => {
-    const margen = d.venta > 0
-      ? ((d.utilidad / d.venta) * 100).toFixed(2)
-      : "0.00";
-
-    pdf.text(
-      `${d.departamento} | Venta: $${d.venta.toFixed(2)} | Utilidad: $${d.utilidad.toFixed(2)} | Margen: ${margen}%`,
-      12,
-      y
-    );
-
-    y += 5;
-    if (y > 260) {
-      pdf.addPage();
-      y = 20;
-    }
+  resumen.forEach(([label, val]) => {
+    pdf.rect(15, y, 80, 8);
+    pdf.rect(95, y, 40, 8);
+    pdf.text(label, 17, y + 5);
+    pdf.text(val, 97, y + 5);
+    y += 8;
   });
 
-  y += 6;
-}
+  y += 8;
 
-// ====================
-// 🔝 TOP 10 ARTÍCULOS MÁS VENDIDOS
-// ====================
-if (corte.vista?.topArticulos?.length) {
-  pdf.setFont("helvetica", "bold");
-  pdf.setFontSize(12);
-  pdf.text("TOP 10 ARTÍCULOS MÁS VENDIDOS", 10, y);
-  y += 6;
+  // ==================================
+  // 🏷️ VENTAS POR DEPARTAMENTO (TABLA)
+  // ==================================
+  if (corte.vista?.deptosOrdenados?.length) {
+    pdf.setFont("helvetica", "bold");
+    pdf.text("VENTAS POR DEPARTAMENTO", 15, y);
+    y += 6;
 
-  pdf.setFont("helvetica", "normal");
-  pdf.setFontSize(10);
+    // Encabezados
+    const headers = ["Departamento", "Venta", "Utilidad", "Margen %"];
+    const colX = [15, 95, 125, 155];
 
-  corte.vista.topArticulos
-    .slice(0, 10)
-    .forEach(a => {
-      const margen = a.importe > 0 && a.utilidad
-        ? ((a.utilidad / a.importe) * 100).toFixed(2)
-        : "0.00";
+    pdf.setFontSize(10);
+    headers.forEach((h, i) => {
+      pdf.rect(colX[i], y, i === 0 ? 80 : 30, 8);
+      pdf.text(h, colX[i] + 2, y + 5);
+    });
 
-      pdf.text(
-        `${a.articulo} | Cant: ${a.cantidad} | Venta: $${a.importe.toFixed(2)} | Margen: ${margen}%`,
-        12,
-        y
-      );
+    y += 8;
+    pdf.setFont("helvetica", "normal");
 
-      y += 5;
+    corte.vista.deptosOrdenados.forEach(d => {
+      const margen = d.venta > 0 ? ((d.utilidad / d.venta) * 100).toFixed(2) : "0.00";
+
+      const row = [
+        d.departamento,
+        `$${d.venta.toFixed(2)}`,
+        `$${d.utilidad.toFixed(2)}`,
+        `${margen}%`
+      ];
+
+      row.forEach((val, i) => {
+        pdf.rect(colX[i], y, i === 0 ? 80 : 30, 8);
+        pdf.text(String(val), colX[i] + 2, y + 5);
+      });
+
+      y += 8;
       if (y > 260) {
         pdf.addPage();
         y = 20;
       }
     });
-}
 
-  // ⚙️ Puedes reusar aquí los gráficos, top artículos, mapa, etc.
-  // Por brevedad no se repite todo el Bloque 6 aquí, pero copia literalmente
-  // la misma función generarPDF completa del archivo principal.
-  
+    y += 10;
+  }
+
+  // ==================================
+  // 🔝 TOP ARTÍCULOS MÁS VENDIDOS
+  // ==================================
+  if (corte.vista?.topArticulos?.length) {
+    pdf.setFont("helvetica", "bold");
+    pdf.text("TOP ARTÍCULOS MÁS VENDIDOS", 15, y);
+    y += 6;
+
+    const headers = ["Artículo", "Cantidad", "Venta", "Margen %"];
+    const colX = [15, 95, 120, 155];
+
+    pdf.setFontSize(10);
+    headers.forEach((h, i) => {
+      pdf.rect(colX[i], y, i === 0 ? 80 : 25, 8);
+      pdf.text(h, colX[i] + 2, y + 5);
+    });
+
+    y += 8;
+    pdf.setFont("helvetica", "normal");
+
+    corte.vista.topArticulos.slice(0, 10).forEach(a => {
+      const margen = a.importe > 0 && a.utilidad
+        ? ((a.utilidad / a.importe) * 100).toFixed(2)
+        : "0.00";
+
+      const row = [
+        a.articulo,
+        a.cantidad,
+        `$${a.importe.toFixed(2)}`,
+        `${margen}%`
+      ];
+
+      row.forEach((val, i) => {
+        pdf.rect(colX[i], y, i === 0 ? 80 : 25, 8);
+        pdf.text(String(val), colX[i] + 2, y + 5);
+      });
+
+      y += 8;
+      if (y > 260) {
+        pdf.addPage();
+        y = 20;
+      }
+    });
+  }
+
+  // ==================================
+  // 📄 MOSTRAR PDF
+  // ==================================
   const blob = pdf.output("blob");
   const url = URL.createObjectURL(blob);
   window.open(url, "_blank");
