--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2147,6 +2147,9 @@ Incluye ${impuestos} de Impuestos
 Cajero: ${cajero}
 --------------------------------
 ¡Gracias por su compra!
+
+NOTA: SI REQUIERE FACTURA SOLICITARLA 
+         AL MOMENTO DE  SU COMPRA
 `;
 
     // 🖨️ Prioridad 1: InnerPrinter
