--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2146,10 +2146,14 @@ Artículos vendidos: ${articulos}
 Incluye ${impuestos} de Impuestos
 Cajero: ${cajero}
 --------------------------------
+--------------------------------
 ¡Gracias por su compra!
-
-NOTA: SI REQUIERE FACTURA SOLICITARLA 
-         AL MOMENTO DE  SU COMPRA
+--------------------------------
+--------------------------------
+ SI REQUIERE FACTURA SOLICITARLA 
+    AL MOMENTO DE  SU COMPRA
+--------------------------------
+--------------------------------
 `;
 
     // 🖨️ Prioridad 1: InnerPrinter
