--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -143,35 +143,30 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
 #carrito-container {
   bottom: -65px !important;     /* 🔥 baja más el carrito */
   margin-top: 25px !important;  /* espacio visual extra */
-}
+}/* 💖 EFECTO CORAZONES (SOLO CONTORNO) */
 .snow{
   pointer-events: none;
   position: fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  z-index: 999; /* 👈 CLAVE */
+  inset: 0;
+  z-index: 999;
+  opacity: 0.45;
+  animation: heartsFall 20s linear infinite;
 
   background-image:
-    radial-gradient(2px 2px at 20% 30%, rgba(255,255,255,.9) 50%, transparent),
-    radial-gradient(1.5px 1.5px at 70% 40%, rgba(255,255,255,.8) 50%, transparent),
-    radial-gradient(1px 1px at 40% 80%, rgba(255,255,255,.7) 50%, transparent);
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='28' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='1.4'%3E%3Cpath d='M12 21s-6.7-4.4-9.3-7.9C-0.8 8.8 2.2 3 7 5.3 9 6.2 10 8.3 12 10.4 14 8.3 15 6.2 17 5.3c4.8-2.3 7.8 3.5 4.3 7.8C18.7 16.6 12 21 12 21z'/%3E%3C/svg%3E");
 
-  background-size: 300px 300px; /* 👈 CLAVE */
-  animation: snowMove 18s linear infinite;
-  opacity: .4;
+  background-size: 80px 80px;
+  background-repeat: repeat;
 }
 
-@keyframes snowMove{
-  from{
-    background-position: 0 -300px;
+@keyframes heartsFall {
+  from {
+    background-position: 0 -600px;
   }
-  to{
+  to {
     background-position: 0 600px;
   }
 }
-
 
 </style>
 </head>
