--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -143,28 +143,46 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
 #carrito-container {
   bottom: -65px !important;     /* 🔥 baja más el carrito */
   margin-top: 25px !important;  /* espacio visual extra */
-}/* 💖 EFECTO CORAZONES (SOLO CONTORNO) */
+}
+/* 💖 CORAZONES TIPO NIEVE (DISPERSOS + VARIOS TAMAÑOS) */
 .snow{
   pointer-events: none;
   position: fixed;
   inset: 0;
   z-index: 999;
-  opacity: 0.45;
-  animation: heartsFall 20s linear infinite;
+  opacity: 0.4;
+  animation: heartsSnow 22s linear infinite;
 
   background-image:
-    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='28' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='1.4'%3E%3Cpath d='M12 21s-6.7-4.4-9.3-7.9C-0.8 8.8 2.2 3 7 5.3 9 6.2 10 8.3 12 10.4 14 8.3 15 6.2 17 5.3c4.8-2.3 7.8 3.5 4.3 7.8C18.7 16.6 12 21 12 21z'/%3E%3C/svg%3E");
+    /* pequeños */
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='1.2'%3E%3Cpath d='M12 21s-6.7-4.4-9.3-7.9C-0.8 8.8 2.2 3 7 5.3 9 6.2 10 8.3 12 10.4 14 8.3 15 6.2 17 5.3c4.8-2.3 7.8 3.5 4.3 7.8C18.7 16.6 12 21 12 21z'/%3E%3C/svg%3E"),
+    /* medianos */
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='1.3'%3E%3Cpath d='M12 21s-6.7-4.4-9.3-7.9C-0.8 8.8 2.2 3 7 5.3 9 6.2 10 8.3 12 10.4 14 8.3 15 6.2 17 5.3c4.8-2.3 7.8 3.5 4.3 7.8C18.7 16.6 12 21 12 21z'/%3E%3C/svg%3E"),
+    /* grandes */
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='1.5'%3E%3Cpath d='M12 21s-6.7-4.4-9.3-7.9C-0.8 8.8 2.2 3 7 5.3 9 6.2 10 8.3 12 10.4 14 8.3 15 6.2 17 5.3c4.8-2.3 7.8 3.5 4.3 7.8C18.7 16.6 12 21 12 21z'/%3E%3C/svg%3E");
 
-  background-size: 80px 80px;
+  /* 🔑 CLAVE: MUCHÍSIMO ESPACIO ENTRE ELEMENTOS */
+  background-size:
+    180px 180px,
+    260px 260px,
+    360px 360px;
+
   background-repeat: repeat;
 }
 
-@keyframes heartsFall {
-  from {
-    background-position: 0 -600px;
+/* ⬇️ Movimiento tipo nieve */
+@keyframes heartsSnow{
+  from{
+    background-position:
+      0 -300px,
+      0 -600px,
+      0 -900px;
   }
-  to {
-    background-position: 0 600px;
+  to{
+    background-position:
+      0 600px,
+      0 1200px,
+      0 1800px;
   }
 }
 
